k8s/manifest.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-consumer-service
  namespace: default
  labels:
    app: kafka-consumer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer-service
  template:
    metadata:
      labels:
        app: kafka-consumer-service
    spec:
      containers:
      - name: kafka-consumer-service
        image: "sateesh2233/kafka-consumer-service:latest"
        # ports:
        #   - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumer-service
  namespace: default
spec:
  selector:
    app: kafka-consumer-service
  type: NodePort
  # ports:
  # - name: http
  #   targetPort: 3000
  #   port: 80
